--- a/CrossComponentCommunicationExamples/angular.json
+++ b/CrossComponentCommunicationExamples/angular.json
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "services:build:production"
+              "buildTarget": "services:build:production"
             },
             "development": {
-              "browserTarget": "services:build:development"
+              "buildTarget": "services:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,7 +75,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "services:build"
+            "buildTarget": "services:build"
           }
         },
         "test": {
@@ -155,10 +155,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "signals:build:production"
+              "buildTarget": "signals:build:production"
             },
             "development": {
-              "browserTarget": "signals:build:development"
+              "buildTarget": "signals:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -166,7 +166,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "signals:build"
+            "buildTarget": "signals:build"
           }
         },
         "test": {
@@ -250,10 +250,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ngrx:build:production"
+              "buildTarget": "ngrx:build:production"
             },
             "development": {
-              "browserTarget": "ngrx:build:development"
+              "buildTarget": "ngrx:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -261,7 +261,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngrx:build"
+            "buildTarget": "ngrx:build"
           }
         },
         "test": {
@@ -345,10 +345,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "data-binding:build:production"
+              "buildTarget": "data-binding:build:production"
             },
             "development": {
-              "browserTarget": "data-binding:build:development"
+              "buildTarget": "data-binding:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -356,7 +356,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "data-binding:build"
+            "buildTarget": "data-binding:build"
           }
         },
         "test": {
